# Final_AgentHarness

./: .gitignore  README.md  VERIFY_AGENT_HARNESS.md  doc1_technical_architecture.md  doc2_feature_inventory.md  doc3_demo_walkthrough.md  doc4_ppt_content.md
Backend/banking_agents/: __init__.py  control_routes.py  governance.py  main.py  pyproject.toml
Backend/banking_agents/collections_domain/: __init__.py  post_call_service.py  repository.py  service.py
Backend/banking_agents/communication/: message.py
Backend/banking_agents/config/: banking_action_policies.yaml  degradation_rules.yaml  evaluators.yaml  execution_modes.yaml  guardrails.yaml  hooks.yaml  llm_judge_policies.yaml  memory_contracts.yaml  model_gateway.yaml  model_pricing.yaml  policies.yaml  settings.py  skills.yaml  tools.yaml
Backend/banking_agents/data/: collections_accounts.json
Backend/banking_agents/evaluation/: __init__.py  rag.py
Backend/banking_agents/external_plugins/: __init__.py
Backend/banking_agents/guardrails/: __init__.py  business.py  events.py  input_validator.py  output_validator.py  rag_guard.py
Backend/banking_agents/harness/: __init__.py  adapters.py  audit_store.py  base_adapter.py  business_guardrails.py  config_loader.py  contract_validator.py  contracts.py  degradation_monitor.py  governance.py  kill_switch.py  plugin_loader.py  policy_engine.py  registry.py  runtime.py  store.py  trace_provider.py
Backend/banking_agents/observability/: logger.py
Backend/banking_agents/policy/: __init__.py  control_plane.py  llm_risk_judge.py  tool_authorization.py
(+261 files in other folders)
